--- a/index13.html
+++ b/index13.html
@@ -207,7 +207,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Modern Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a free, expressive style of dancing started in the early 20th century as a reaction to classical ballet. In recent years it has included elements not usually associated with dance, such as speech and film.
   </div>
 </div>
 	</div>
