--- a/index13.html
+++ b/index13.html
@@ -215,7 +215,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Popping</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Popping is a street dance and one of the original funk styles that came from Fresno, California during the late 1960s–1970s. ... However, popping is distinct from breaking and locking, with which it is often confused. A popping dancer is commonly referred to as a popper.
   </div>
 </div>
 			</div>
