--- a/index13.html
+++ b/index13.html
@@ -223,7 +223,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Quickstep</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    The quickstep is a light-hearted member of the standard ballroom dances. The movement of the dance is fast and powerfully flowing and sprinkled with syncopations. The upbeat melodies that quickstep is danced to make it suitable for both formal and informal events.
   </div>
 </div>
 		</div>
