--- a/index13.html
+++ b/index13.html
@@ -238,7 +238,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div class="dropdown">
   <button class="dropbtn">Samba</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Samba is a lively, rhythmical dance of Afro-Brazilian origin in 2/4 time danced to Samba music whose origins include the Maxixe. Samba is a dance authentic to black/African people in Brazil who brought much of their music and dance culture into Latin America with, them upon arrival into many Latin American countries.
   </div>
 </div>
 	
