--- a/index13.html
+++ b/index13.html
@@ -245,7 +245,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div class="dropdown">
   <button class="dropbtn">Swing</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Swing dancing is a dance style, or a group of dances, originating from Harlem, New York with Afro-American Roots. The feeling of the dance is "swinging", as it developed to the swing style of jazz music from the 1920s to the 1940s or 50s.
   </div>
 </div>
 			</div>
