--- a/index13.html
+++ b/index13.html
@@ -261,7 +261,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Vinennese</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Viennese Waltz (German: Wiener Walzer) is the genre of a ballroom dance. At least three different meanings are recognized. In the historically first sense, the name may refer to several versions of the waltz, including the earliest waltzes done in ballroom dancing, danced to the music of Viennese Waltz.
   </div>
 </div>
 	</div>
