--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function myFunction() {
 		 </il>
 		</CLS></center>
 
-
+<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">Styles Of Dance</font></p></a></b></p></h1></div></div>
 
 	</body>
 </html>
