--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
 		</div></h1></center>
 	
 
-	<center><h1><div id="navcontainer" style="width:7%; text-align: center; margin-top: 10%;">
+	<center><h1><div id="navcontainer" style="width:7%; text-align: center;">
 	<ul>
 <li><a href="https://chey-s.github.io/-Ballet/index24.html">2001</a></li>
 		</ul>
