--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
         <title>Ballet</title>
 </head>
 <body>
-        <center><div margin-bottom: 30%><h1><div id="navcontainer" style="width:71.12%;">
+        <center><h1><div id="navcontainer" style="width:71.12%;">
 	<ul>
  <li><a href="https://chey-s.github.io/Ballet/index3.html">1800</a></li>
  <ll><a href="https://chey-s.github.io/Ballet/index4.html">1810</a></ll>
@@ -17,7 +17,7 @@
 <li><a href="https://chey-s.github.io/Ballet/index11.html">1880</a></li>
 		<ll><a href="https://chey-s.github.io/Ballet/index12.html">1890</a></ll>
  </ul>
-		</div></h1></div></center>
+		</div></h1></center>
 	
 	<center><h1><div id="navcontainer" style="width:71.12%; margin-top: 10%;">
 	<ul>
