--- a/index13.html
+++ b/index13.html
@@ -28,7 +28,7 @@
     text-decoration: none;
     display: block;
 }
-	       .dropdown-content a:hover {background-color: #FFFF00}
+	       .dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
     display: block;
