--- a/index13.html
+++ b/index13.html
@@ -59,12 +59,12 @@ function myFunction() {
        
     <center><h1><font size="50"px>Styles of Dance</font></h1></center>
 	
-	<li><div align= "center"><div style="margin-top: 5%"><div class="dropdown">
+	<CS><div align= "center"><div style="margin-top: 5%"><div class="dropdown">
   <button class="dropbtn">Ballet</button>
   <div class="dropdown-content">
     an artistic dance form performed to music using precise and highly formalized set steps and gestures. Classical ballet, which originated in Renaissance Italy and established its present form during the 19th century, is characterized by light, graceful, fluid movements and the use of pointe shoes.
   </div>
-		</div></li>
+		</div></CS>
 	
 		<div class="dropdown">
   <button class="dropbtn">Belly Dance</button>
