--- a/index13.html
+++ b/index13.html
@@ -23,7 +23,7 @@
 	grid-template-columns: 100px 100px 100px;
 }
 .dropdown-content a {
-    color: white;
+    color: #800080;
     padding: 0% 0%;
     text-decoration: none;
     display: block;
