--- a/index3.html
+++ b/index3.html
@@ -10,12 +10,12 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:17.36%;">
 	<ul>
-  <li><a href="https://chey-s.github.io/Ballet/index2.html">Marie Taglioni</a></li>
+  <li><a href="https://chey-s.github.io/Ballet-/index25.html">Marie Taglioni</a></li>
 		
 		</ul>
 		</div></h1></div>
 
-  <div align="left"><a href="https://chey-s.github.io/Ballet-/index25.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
+  <div align="left"><a href="https://chey-s.github.io/Ballet/index3.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
 	
 </body>
 </html>
