--- a/index4.html
+++ b/index4.html
@@ -9,12 +9,12 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:12%;">
 	<ul>
-  <li><a href="https://orange-object.github.io/Ballet/index3.html">Fanny Cerrito</a></li>
+  <li><a href="https://chey-s.github.io/Ballet-/index26.html">Fanny Cerrito</a></li>
 </ul>
 		</div></h1></div>  
 	<div align=left><h1><div id="navcontainer" style="width:15.5%;">
 	<ul>
-	<li><a href="https://orange-object.github.io/Ballet/index3.html">Elena Andreianova</a></li>
+	<li><a href="https://chey-s.github.io/Ballet-/index27.html">Elena Andreianova</a></li>
 		</ul>
 	</div></h1></div>
 
