--- a/index4.html
+++ b/index4.html
@@ -14,7 +14,7 @@
 		</div></h1></div>  
 	<div align=left><h1><div id="navcontainer" style="width:15.5%;">
 	<ul>
-	<li><a href="https://chey-s.github.io/Ballet-/index27.html">Elena Andreianova</a></li>
+	<li><a href="https://chey-s.github.io/Ballet-/index27.html">Elena Andreyanova</a></li>
 		</ul>
 	</div></h1></div>
 
