--- a/index10.html
+++ b/index10.html
@@ -9,7 +9,7 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:18.12%;">
 	<ul>
-  <li><a href="https://orange-object.github.io/Ballet/index9.html">Mathilde Kschessinska</a></li>
+  <li><a href="https://chey-s.github.io/Ballet-/index28.html">Mathilde Kschessinska</a></li>
 		</ul>
 		</div></h1></div>
 
