--- a/index11.html
+++ b/index11.html
@@ -15,7 +15,7 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:26.629%;">
 	<ul>
-<li><a href="https://orange-object.github.io/Ballet/index10.html">Olga Preobrazhenskaya</a></li>
+<li><a href="https://chey-s.github.io/Ballet-/index29.html">Olga Preobrazhenskaya</a></li>
   </ul>
 	</div></h1></div>
 	
