--- a/index11.html
+++ b/index11.html
@@ -21,7 +21,7 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:21.5%;">
 	<ul>
-<li><a href="https://orange-object.github.io/Ballet/index10.html">Tamara Karsavina</a></li>
+<li><a href="https://chey-s.github.io/Ballet-/index31.html">Tamara Karsavina</a></li>
   </ul>
 	</div></h1></div>
 	
