--- a/index12.html
+++ b/index12.html
@@ -9,7 +9,7 @@
 	
 	<div align=left><h1><div id="navcontainer" style="width:19.44%;">
 	<ul>
-<li><a href="https://orange-object.github.io/Ballet/index11.html">Ninette de Valois</a></li>
+<li><a href="https://chey-s.github.io/Ballet-/index32.html">Ninette de Valois</a></li>
 		</ul>
 	</div></h1></div>     
 
