--- a/index.html
+++ b/index.html
@@ -80,5 +80,7 @@ function myFunction() {
 
 <div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index13.html" target="_blank"><p><font color="black">Styles Of Dance</font></p></a></b></p></h1></div></div>
 
+		<div><div align="center"><h1><p><b><a href="http://www.balletinsider.com/en/archive/blog/756" target="_blank"><p><font color="black">History of the ballet make-up</font></p></a></b></p></h1></div></div>
+		
 	</body>
 </html>
