--- a/index75.html
+++ b/index75.html
@@ -8,14 +8,7 @@
        
     <center><h1><font size="50"px>Ballet Terms</font></h1></center>
 	
-	<div2><div align= "center"><div style="margin-top: 5%"><div class="dropdown">
-  <button class="dropbtn">Ballet</button>
-  <div class="dropdown-content">
-    an artistic dance form performed to music using precise and highly formalized set steps and gestures. Classical ballet, which originated in Renaissance Italy and established its present form during the 19th century, is characterized by light, graceful, fluid movements and the use of pointe shoes.
-  </div>
-		</div></div2>
-	
-		<div class="dropdown">
+		<div><div class="dropdown">
   <button class="dropbtn">Allégro</button>
   <div class="dropdown-content">
     a dance originating in the Middle East, typically performed by a woman and involving undulating movements of the belly and rapid gyration of the hips.
