--- a/index.html
+++ b/index.html
@@ -84,5 +84,7 @@ function myFunction() {
 		
 <div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index13.html" target="_blank"><p><font color="black">Styles Of Dance</font></p></a></b></p></h1></div></div>
 
+		<div><div align="center"><h1><p><b><a href="http://www.thedancepointe.com/home.html" target="_blank"><p><font color="black">www.thedancepointe.com</font></p></a></b></p></h1></div></div>
+		
 	</body>
 </html>
