--- a/index13.html
+++ b/index13.html
@@ -117,6 +117,13 @@ Contemporary dance is a style of expressive dance that combines elements of seve
     House dance is a social dance primarily danced to house music that has roots in the clubs of Chicago and of New York. The main elements of House dance include "Footwork", "Jacking", and "Lofting".
   </div>
 </div>
+		
+			<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+  <button class="dropbtn">Hustle</button>
+  <div class="dropdown-content">
+   The Hustle is a catchall name for some disco dances which were extremely popular in the 1970s. Today it mostly refers to the unique partner dance done in ballrooms and nightclubs to disco music. It has some features in common with swing dance.
+  </div>
+</div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Jazz Dance</button>
