--- a/index13.html
+++ b/index13.html
@@ -104,7 +104,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 </div>
 			</div>
 			
-		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+		<div><div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Hip-hop Dance</button>
   <div class="dropdown-content">
     a style of popular music of US black and Hispanic origin, featuring rap with an electronic backing.
