--- a/index13.html
+++ b/index13.html
@@ -104,7 +104,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 </div>
 			</div>
 			
-		<div><div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Hip-hop Dance</button>
   <div class="dropdown-content">
     a style of popular music of US black and Hispanic origin, featuring rap with an electronic backing.
@@ -123,7 +123,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
   <div class="dropdown-content">
     The Hustle is a catchall name for some disco dances which were extremely popular in the 1970s. Today it mostly refers to the unique partner dance done in ballrooms and nightclubs to disco music. It has some features in common with swing dance.
   </div>
-</div>
+				</div> </div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Jazz Dance</button>
