--- a/index13.html
+++ b/index13.html
@@ -105,25 +105,27 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 			</div>
 			
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Hip-hop Dance</button>
+  <button class="dropbtn">Latin Dance</button>
   <div class="dropdown-content">
-    a style of popular music of US black and Hispanic origin, featuring rap with an electronic backing.
+    It refers to types of ballroom dance and folk dance that (with few exceptions) originated in Latin America. The category of Latin dances in the international dancesport competitions consists of the cha-cha-cha, rumba, samba, paso doble, and also the jive of United States origin.
   </div>
 </div>
 	
+	
 	<div class="dropdown">
-  <button class="dropbtn">House Dance</button>
+  <button class="dropbtn">Line Dance</button>
   <div class="dropdown-content">
-    House dance is a social dance primarily danced to house music that has roots in the clubs of Chicago and of New York. The main elements of House dance include "Footwork", "Jacking", and "Lofting".
+    a type of country and western dancing in which dancers line up in a row without partners and follow a choreographed pattern of steps to music.
   </div>
 </div>
-		
-			<div><div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Hustle</button>
+	
+		<div class="dropdown">
+  <button class="dropbtn">Locking</button>
   <div class="dropdown-content">
-    The Hustle is a catchall name for some disco dances which were extremely popular in the 1970s. Today it mostly refers to the unique partner dance done in ballrooms and nightclubs to disco music. It has some features in common with swing dance.
+    Locking is a style of funk dance, which is today also associated with hip hop. The name is based on the concept of locking movements, which basically means freezing from a fast movement and "locking" in a certain position, holding that position for a short while and then continuing in the same speed as before.
   </div>
-				</div> </div>
+</div>
+			</div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Jazz Dance</button>
