--- a/index13.html
+++ b/index13.html
@@ -105,24 +105,24 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 			</div>
 			
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Latin Dance</button>
+  <button class="dropbtn">Hip-Hop Dance</button>
   <div class="dropdown-content">
-    It refers to types of ballroom dance and folk dance that (with few exceptions) originated in Latin America. The category of Latin dances in the international dancesport competitions consists of the cha-cha-cha, rumba, samba, paso doble, and also the jive of United States origin.
+    Hip-hop dance refers to street dance styles primarily performed to hip-hop music or that have evolved as part of hip-hop culture. It includes a wide range of styles primarily breaking, locking, and popping which were created in the 1970s and made popular by dance crews in the United States.
   </div>
 </div>
 	
 	
 	<div class="dropdown">
-  <button class="dropbtn">Line Dance</button>
+  <button class="dropbtn">House Dance</button>
   <div class="dropdown-content">
-    a type of country and western dancing in which dancers line up in a row without partners and follow a choreographed pattern of steps to music.
+    House dance is a social dance primarily danced to house music that has roots in the clubs of Chicago and of New York. The main elements of House dance include "Footwork", "Jacking", and "Lofting".
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Locking</button>
+  <button class="dropbtn">Hustle</button>
   <div class="dropdown-content">
-    Locking is a style of funk dance, which is today also associated with hip hop. The name is based on the concept of locking movements, which basically means freezing from a fast movement and "locking" in a certain position, holding that position for a short while and then continuing in the same speed as before.
+    The Hustle is a catchall name for some disco dances which were extremely popular in the 1970s. Today it mostly refers to the unique partner dance done in ballrooms and nightclubs to disco music. It has some features in common with swing dance.
   </div>
 </div>
 			</div>
