--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ function myFunction() {
 		
 <div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index13.html" target="_blank"><p><font color="black">Styles Of Dance</font></p></a></b></p></h1></div></div>
 
+		<div><div align="center"><h1><p><b><a href="https://www.google.com/search?q=things+to+know+about+ballet&oq=things+to+know+about+ballet&aqs=chrome..69i57j0l5.8787j0j7&sourceid=chrome&ie=UTF-8" target="_blank"><p><font color="black">things to know about ballet</font></p></a></b></p></h1></div></div>
+		
 		<div><div align="center"><h1><p><b><a href="http://www.thedancepointe.com/home.html" target="_blank"><p><font color="black">www.thedancepointe.com</font></p></a></b></p></h1></div></div>
 		
 	</body>
