--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ function myFunction() {
 
 		<div><div align="center"><h1><p><b><a href="https://www.google.com/search?q=things+to+know+about+ballet&oq=things+to+know+about+ballet&aqs=chrome..69i57j0l5.8787j0j7&sourceid=chrome&ie=UTF-8" target="_blank"><p><font color="black">things to know about ballet</font></p></a></b></p></h1></div></div>
 		
+		 <center><div><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>Interesting facts about Children's Ballet Dancing: Facts & Ideas. Ballet began about 500 years ago in Italy as a form of entertainment in the courts. The first full-scale ballet was staged in Paris on 15th October, 1581. When ballet first started the dancers wore masks and heavy costumes that were difficult to move in.</p></div>
+			 </div></div></center>
+		
 		<div><div align="center"><h1><p><b><a href="http://www.thedancepointe.com/home.html" target="_blank"><p><font color="black">www.thedancepointe.com</font></p></a></b></p></h1></div></div>
 		
 	</body>
