--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ function myFunction() {
 		</CLS></center>
 		
 <div><div align="center"><h1><p><b><a href="https://ballethub.com/ballet-terms-dictionary/" target="_blank"><p><font color="black">Ballet Terms</font></p></a></b></p></h1></div></div>
+
+		<div><div align="center"><h1><p><b><a href="https://www.thoughtco.com/famous-women-of-dance-3528474" target="_blank"><p><font color="black">Famous Women of Dance</font></p></a></b></p></h1></div></div>
 		
 <div><div align="center"><h1><p><b><a href="http://www.balletinsider.com/en/archive/blog/756" target="_blank"><p><font color="black">History of the ballet make-up</font></p></a></b></p></h1></div></div>
 		
