--- a/index76.html
+++ b/index76.html
@@ -63,5 +63,7 @@ function myFunction() {
 <body>  
 	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">HAPPY BIRTHDAY</font></p></a></b></p></h1>
 	
-	</body>
+		<center><h1>HAPPY BIRTHDAY</h1></center>
+	
+		</body>
 </html>
