--- a/index76.html
+++ b/index76.html
@@ -63,7 +63,7 @@ function myFunction() {
 <body>  
 	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">HAPPY BIRTHDAY</font></p></a></b></p></h1>
 	
-		<center><h1>HAPPY BIRTHDAY</h1></center>
+		<center><div style="background-color:red;color:black;padding:20px;"><h1>HAPPY BIRTHDAY</h1></div</center>
 	
 		</body>
 </html>
