--- a/index76.html
+++ b/index76.html
@@ -65,5 +65,6 @@ function myFunction() {
 	
 		<center><div style="background-color:red;color:black;padding:20px; font-size:300%"><h1>HAPPY BIRTHDAY</h1></div></center>
 		
+		<div align="right"><a href="https://orange-object.github.io/dude/index2.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px; rotate:180deg;"></a></div>
 </body>
 </html>
