--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
  </ul>
 		</div></h1></center>
 	
-	<center><h1><div id="navcontainer" style="width:71.12%; margin-top: 10%;">
+	<center><h1><div id="navcontainer" style="width:960px; margin-top: 10%;">
 	<ul>
  <li><a href="https://chey-s.github.io/-Ballet/index14.html">1900</a></li>
  <ll><a href="https://chey-s.github.io/-Ballet/index15.html">1910</a></ll>
