--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
        
     <center><h1><font size="50"px>1800</font></h1></center>
 	
-	<div align=left><h1><div id="navcontainer" style="width:17.36%;">
+	<div align=left><h1><div id="navcontainer" style="width:234.4px;">
 	<ul>
   <li><a href="https://chey-s.github.io/Ballet-/index25.html">Marie Taglioni</a></li>
 		
