--- a/index4.html
+++ b/index4.html
@@ -7,12 +7,12 @@
        
     <center><h1><font size="50"px>1810</font></h1></center>
 	
-	<div align=left><h1><div id="navcontainer" style="width:16.92%;">
+	<div align=left><h1><div id="navcontainer" style="width:228.4px;">
 	<ul>
   <li><a href="https://chey-s.github.io/Ballet-/index26.html">Fanny Cerrito</a></li>
 </ul>
 		</div></h1></div>  
-	<div align=left><h1><div id="navcontainer" style="width:21.887%;">
+	<div align=left><h1><div id="navcontainer" style="width:295.49px;">
 	<ul>
 	<li><a href="https://chey-s.github.io/Ballet-/index27.html">Elena Andreianova</a></li>
 		</ul>
