--- a/index11.html
+++ b/index11.html
@@ -7,7 +7,7 @@
        
     <center><h1><font size="50"px>1880</font></h1></center>
 	
-	<div align=left><h1><div id="navcontainer" style="width:16.55%;">
+	<div align=left><h1><div id="navcontainer" style="width:223.2px;">
 	<ul>
 <li><a href="https://chey-s.github.io/Ballet-/index29.html">Anna Pavlova</a></li>
 		</ul>
