--- a/index11.html
+++ b/index11.html
@@ -13,7 +13,7 @@
 		</ul>
 	</div></h1></div>
 	
-	<div align=left><h1><div id="navcontainer" style="width:26.629%;">
+	<div align=left><h1><div id="navcontainer" style="width:359.4px;">
 	<ul>
 <li><a href="https://chey-s.github.io/Ballet-/index30.html">Olga Preobrazhenskaya</a></li>
   </ul>
