--- a/index11.html
+++ b/index11.html
@@ -19,7 +19,7 @@
   </ul>
 	</div></h1></div>
 	
-	<div align=left><h1><div id="navcontainer" style="width:21.5%;">
+	<div align=left><h1><div id="navcontainer" style="width:290px;">
 	<ul>
 <li><a href="https://chey-s.github.io/Ballet-/index31.html">Tamara Karsavina</a></li>
   </ul>
