--- a/index12.html
+++ b/index12.html
@@ -7,7 +7,7 @@
        
     <center><h1><font size="50"px>1890</font></h1></center>
 	
-	<div align=left><h1><div id="navcontainer" style="width:19.44%;">
+	<div align=left><h1><div id="navcontainer" style="width:262px;">
 	<ul>
 <li><a href="https://chey-s.github.io/Ballet-/index32.html">Ninette de Valois</a></li>
 		</ul>
