--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
 		</div></h1></center>
 	
 
-	<center><h1><div id="navcontainer" style="width:7%; margin-top: 5%;">
+	<center><h1><div id="navcontainer" style="width:96.9px; margin-top: 5%;">
 	<ul>
  <li><a href="https://chey-s.github.io/-Ballet/index24.html">2001</a></li>
 
