--- a/index76.html
+++ b/index76.html
@@ -67,5 +67,6 @@ function myFunction() {
 		
 		<center><div style="background-color:red;color:black;padding-top:1px; font-size:69.8px"><h1>CHEYENNE SMITH</h1></div></center>
 		
+		<h3><div><a href="https://orange-object.github.io/dude/index2.html"><img class="left" src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:500px; border:10px solid green; padding:20px; margin-right:5.5cm";>
 </body>
 </html>
