--- a/index76.html
+++ b/index76.html
@@ -63,9 +63,9 @@ function myFunction() {
 <body>  
 	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">SURPRISE</font></p></a></b></p></h1>
 	
-		<center><div style="background-color:red;color:black;padding-bottom:1px; font-size:72.1px"><h1>HAPPY BIRTHDAY</h1></div></center>
+		<center><div style="background-color:red;color:black;padding-bottom:.5px; font-size:72.1px"><h1>HAPPY BIRTHDAY</h1></div></center>
 		
-		<center><div style="background-color:red;color:black;padding-top:1px; font-size:69.8px"><h1>CHEYENNE SMITH</h1></div></center>
+		<center><div style="background-color:red;color:black;padding-top:.5px; font-size:69.8px"><h1>CHEYENNE SMITH</h1></div></center>
 		
 		<h3><div><a href="https://orange-object.github.io/dude/index2.html"><img class="left" src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:500px; border:10px solid green; padding:20px; margin-right:5.5cm";>
 </body>
