--- a/index76.html
+++ b/index76.html
@@ -67,6 +67,6 @@ function myFunction() {
 		
 		<center><div style="background-color:red;color:black;padding-top:0px; font-size:69.8px"><h1>CHEYENNE SMITH</h1></div></center>
 		
-		<h3><center><div><a href="https://orange-object.github.io/dude/index2.html"><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:500px; border:10px solid green; padding:20px; margin-right:5.5cm";></div></center>
+		<center><h3><div><a href="https://orange-object.github.io/dude/index2.html"><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:500px; border:10px solid green; padding:20px; margin-right:5.5cm";></div></h3></center>
 </body>
 </html>
