--- a/index76.html
+++ b/index76.html
@@ -61,7 +61,7 @@ function myFunction() {
  <title>Ballet</title>
 </head>
 <body>  
-	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index2.html" target="_blank"><p><font color="black">SURPRISE</font></p></a></b></p></h1>
+	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index.html" target="_blank"><p><font color="black">SURPRISE</font></p></a></b></p></h1>
 	
 		<center><div style="background-color:red;color:black;padding-bottom:0px; font-size:72.1px"><h1>HAPPY BIRTHDAY</h1></div></center>
 		
