--- a/index76.html
+++ b/index76.html
@@ -65,7 +65,7 @@ function myFunction() {
 
 		<center><div style="background-color:red;color:black;padding-bottom:0px; margin-top: 0px; font-size:72.1px"><h1>HAPPY BIRTHDAY</h1></div></center>
 		
-		<center><h3><div><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:920px; border:10px solid green; padding:0px";></div></h3></center>
+		<center><h3><div><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:920px; border:10px solid green; padding:0px; margin-top:0px";></div></h3></center>
 		
 		<center><div style="background-color:red;color:black;padding-top:0px; font-size:69.8px"><h1>CHEYENNE SMITH</h1></div></center>
 		
