--- a/index76.html
+++ b/index76.html
@@ -63,6 +63,8 @@ function myFunction() {
 <body>  
 	<div><div align="center"><h1><p><b><a href="https://chey-s.github.io/Ballet/index.html" target="_blank"><p><font color="black">SURPRISE</font></p></a></b></p></h1>
 
+		<center><div style="background-color:red;color:black;padding-bottom:0px; margin-top: 0px; font-size:72.1px"><h1>HAPPY BIRTHDAY CHEYENNE SMITH</h1></div></center>
+		
 		<center><h3><div><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:920px; border:10px solid green; padding:0px; margin-top:0px";></div></h3></center>
 		
 		<center><div style="background-color:red;color:black;padding-bottom:0px; margin-top: 0px; font-size:72.1px"><h1>HAPPY BIRTHDAY</h1></div></center>
