--- a/index76.html
+++ b/index76.html
@@ -56,7 +56,7 @@ function myFunction() {
 		
 	</style>
 	
-	<link href="Cheyenne.css" rel="stylesheet" type="text/css">
+	<link href="CheyenneS.css" rel="stylesheet" type="text/css">
        
  <title>Ballet</title>
 </head>
