--- a/index13.html
+++ b/index13.html
@@ -209,7 +209,13 @@ Contemporary dance is a style of expressive dance that combines elements of seve
   </div>
 </div>
 			</div>
-	
+	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+  <button class="dropbtn">Tango</button>
+  <div class="dropdown-content">
+   Tango is a partner dance that originated in the 1880s along the River Plata, the natural border between Argentina and Uruguay, and soon spread to the rest of the world. Early tango was known as tango criollo (Creole tango).
+  </div>
+</div>
+		
 	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Tap Dance</button>
   <div class="dropdown-content">
@@ -219,7 +225,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		</div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Vinennese</button>
+  <button class="dropbtn">Viennese Waltz</button>
   <div class="dropdown-content">
     Viennese Waltz (German: Wiener Walzer) is the genre of a ballroom dance. At least three different meanings are recognized. In the historically first sense, the name may refer to several versions of the waltz, including the earliest waltzes done in ballroom dancing, danced to the music of Viennese Waltz.
   </div>
