--- a/index13.html
+++ b/index13.html
@@ -208,21 +208,22 @@ Contemporary dance is a style of expressive dance that combines elements of seve
     Swing dancing is a dance style, or a group of dances, originating from Harlem, New York with Afro-American Roots. The feeling of the dance is "swinging", as it developed to the swing style of jazz music from the 1920s to the 1940s or 50s.
   </div>
 </div>
-			</div>
-	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+		</div>
+	
+
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Tango</button>
   <div class="dropdown-content">
-   Tango is a partner dance that originated in the 1880s along the River Plata, the natural border between Argentina and Uruguay, and soon spread to the rest of the world. Early tango was known as tango criollo (Creole tango).
+    Tango is a partner dance that originated in the 1880s along the River Plata, the natural border between Argentina and Uruguay, and soon spread to the rest of the world. Early tango was known as tango criollo (Creole tango).
   </div>
 </div>
-		
-	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
+	<div class="dropdown">
   <button class="dropbtn">Tap Dance</button>
   <div class="dropdown-content">
     a dance performed wearing shoes fitted with metal taps, characterized by rhythmical tapping of the toes and heels.
   </div>
 </div>
-		</div>
+			</div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Viennese Waltz</button>
