--- a/index13.html
+++ b/index13.html
@@ -32,7 +32,7 @@
 		<div class="dropdown">
   <button class="dropbtn">Break Dancing</button>
   <div class="dropdown-content">
-   separate or cause to separate into pieces as a result of a blow, shock, or strain.
+   a style of acrobatic dancing originating in the mid-1970s, often performed to rap music usually by teenage males in the streets, and characterized by intricate footwork, pantomime, spinning headstands, tumbling, and elaborate improvised virtuosic movements. Expand. Also called break, breaking.
   </div>
 </div>
 	</div>
