--- a/index76.html
+++ b/index76.html
@@ -65,7 +65,9 @@ function myFunction() {
 
 		<center><div style="background-color:red;color:black;padding-bottom:0px; margin-top: 0px; font-size:36.1px"><h1>HAPPY BIRTHDAY CHEYENNE SMITH</h1></div></center>
 		
-		<center><h3><div><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:920px; border:10px solid green; padding:0px; margin-top:0px";></div></h3></center>
+		<center><h3><div><img src="https://media.giphy.com/media/SUA9E0GcSyhCU/giphy.gif"; style="background-color:lightgrey; width:920px; border:10px solid green; padding:0px; margin-top:0px";></div></h3></center>	
 		
+	<div align="right"><a href="https://orange-object.github.io/dude/index2.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px; transform:rotate(180deg);"></a></div>
+	
 </body>
 </html>
